# deepSKA

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: docs.yml
docs/: CONTRIBUTING.md  api.md  contributing.md
tests/: conftest.py
tests/fixtures/: general.py
